se agrego los cambios en el TS

--- a/task-list-app/src/app/pages/home/home.page.html
+++ b/task-list-app/src/app/pages/home/home.page.html
@@ -8,7 +8,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-item>
-    <ion-input type="text" />
+    <ion-input type="text" placeholder="escribe tu tarea..." name="task" />
 
   </ion-item>
 </ion-content>
