--- a/task-list-app/src/app/pages/home/home.page.html
+++ b/task-list-app/src/app/pages/home/home.page.html
@@ -8,7 +8,10 @@
 
 <ion-content [fullscreen]="true">
   <ion-item>
-    <ion-input type="text" placeholder="escribe tu tarea..." name="task" />
+    <ion-input type="text" placeholder="escribe tu tarea..." name="task" [(ngModel)]="task"/>
+    <ion-button (click)="addTask()" >
+      <ion-icon name="add-outline"/>
+    </ion-button>
 
   </ion-item>
 </ion-content>
