--- a/task-list-app/src/app/pages/home/home.page.html
+++ b/task-list-app/src/app/pages/home/home.page.html
@@ -14,19 +14,30 @@
     </ion-button>
   </ion-item>
   @if (tasksList.length ==0){
-    <ion-item class="ion-text-center" lines="none">
-      <ion-label>
-        No hay tareas pendientes
-      </ion-label>
-    </ion-item>
+    <ion-item-sliding>
+      <ion-item class="ion-text-center" lines="none">
+        <ion-label>
+          No hay tareas pendientes
+        </ion-label>
+      </ion-item>
+    </ion-item-sliding>
+
   } @else{
     <ion-list>
       @for (item of tasksList;track $index){
-        <ion-item>
-          <ion-label>
-            {{item}}
-          </ion-label>
-        </ion-item>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>
+              {{item}}
+            </ion-label>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option (click)="delete(task)" >
+              <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+
       }
     </ion-list>
   }
