--- a/task-list-app/src/app/pages/home/home.page.html
+++ b/task-list-app/src/app/pages/home/home.page.html
@@ -32,7 +32,7 @@
             </ion-label>
           </ion-item>
           <ion-item-options side="end">
-            <ion-item-option (click)="delete(task)" >
+            <ion-item-option (click)="delete(item)" >
               <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
             </ion-item-option>
           </ion-item-options>
