--- a/task-list-app/src/app/pages/home/home.page.html
+++ b/task-list-app/src/app/pages/home/home.page.html
@@ -24,21 +24,23 @@
 
   } @else{
     <ion-list>
-      @for (item of tasksList;track $index){
-        <ion-item-sliding>
-          <ion-item>
-            <ion-label>
-              {{item}}
-            </ion-label>
-          </ion-item>
-          <ion-item-options side="end">
-            <ion-item-option (click)="delete(item)" >
-              <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-        </ion-item-sliding>
+      <ion-reorder-group [disabled]="false" (ionItemReorder)="orderTask($any($event))" ) >
+        @for (item of tasksList;track $index){
+          <ion-item-sliding>
+            <ion-item>
+              <ion-label>
+                {{item}}
+              </ion-label>
+            </ion-item>
+            <ion-item-options side="end">
+              <ion-item-option (click)="delete(item)" >
+                <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+              </ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+        }
+      </ion-reorder-group>
 
-      }
     </ion-list>
   }
 
