corregido error de sintaxis en el manejo de reordenamiento de tareas

--- a/task-list-app/src/app/pages/home/home.page.html
+++ b/task-list-app/src/app/pages/home/home.page.html
@@ -24,7 +24,7 @@
 
   } @else{
     <ion-list>
-      <ion-reorder-group [disabled]="false" (ionItemReorder)="orderTask($any($event))" ) >
+      <ion-reorder-group [disabled]="false" (ionItemReorder)="orderTask($any($event))"  >
         @for (item of tasksList;track $index){
           <ion-item-sliding>
             <ion-item>
