--- a/task-list-app/src/app/pages/home/home.page.html
+++ b/task-list-app/src/app/pages/home/home.page.html
@@ -24,13 +24,14 @@
 
   } @else{
     <ion-list>
-      <ion-reorder-group [disabled]="false" (ionItemReorder)="orderTask($any($event))"  >
+      <ion-reorder-group [disabled]="false" (ionItemReorder)="orderTask($any($event))" >
         @for (item of tasksList;track $index){
           <ion-item-sliding>
             <ion-item>
               <ion-label>
                 {{item}}
               </ion-label>
+              <ion-reorder/>
             </ion-item>
             <ion-item-options side="end">
               <ion-item-option (click)="delete(item)" >
